<resources>
    <string name="app_name">Tennis Court Counter</string>
    <string name="tennis_court">tennis_court</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="new_game">New Game</string>
    <string name="add_game">Game +</string>
    <string name="add_score">Score +</string>
    <string name="set">Set</string>
    <string name="set_1">1</string>
    <string name="set_2">2</string>
    <string name="set_3">3</string>
    <string name="set_1_A_init">0</string>
    <string name="set_2_A_init">0</string>
    <string name="set_3_A_init">0</string>
    <string name="set_1_B_init">0</string>
    <string name="set_2_B_init">0</string>
    <string name="set_3_B_init">0</string>
    <string name="colon">:</string>
    <string name="score_A_init">0</string>
    <string name="score_B_init">0</string>
</resources>
